project/logs/20250514_161229.log
Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

complete create D3D12Device!!!

Hello,DirectX!

clintSize:1280,720

Begin CompileShader, path:Object3D.VS.hlsl,profile:vs_6_0

Object3D.VS.hlsl:17:1: error: unknown type name 'VertexShaderOutput'; did you mean 'VertexShadeOutput'?
VertexShaderOutput main(VertexShadeInput input)
^~~~~~~~~~~~~~~~~~
VertexShadeOutput
Object3D.VS.hlsl:7:8: note: 'VertexShadeOutput' declared here
struct VertexShadeOutput
       ^
Object3D.VS.hlsl:17:20: error: functions that differ only in their return type cannot be overloaded
VertexShaderOutput main(VertexShadeInput input)
~~~~~~~~~~~~~~~~~~ ^
Object3D.VS.hlsl:1:8: note: previous definition is here
float4 main( float4 pos : POSITION ) : SV_POSITION
~~~~~~ ^

